duniverse/menhirLib.20200211/test/static/bad/cyclic-parameterized-definition.mly
(* Reported by Daniel Weil and Radu Grigore. *)
(* Fixed in r154. *)
%%
b(A): A(b) {}
a(B): B(a) {}
c: a(b) {}
%%

